--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookie
 category.custom-dialogs=カスタムダイアログ
 category.data-integration=データ統合
 category.data-providers=データプロバイダー
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=開発
 category.devices=デバイス
 category.digital-signature=デジタル署名
@@ -4897,6 +4898,7 @@ default-logout-page=ログアウトページ
 default-logout-page-help=このページはユーザーがログアウト後に自動的にリダイレクトされるページになります。例えば、http://localhost:8080/web/guest/logoutをデフォルトのログアウト後ページにしたい場合、/web/guest/logoutと設定してください。
 default-max-connections-per-route=ルートごとのデフォルト最大接続数
 default-page-audit-image-alt-description=デフォルトのページ監査画像です。
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=デフォルトの表示設定
 default-product-display-page=デフォルトの商品表示ページ
 default-regular-theme=デフォルトテーマ
@@ -13981,6 +13983,7 @@ select-css-client-extensions=CSS クライアント拡張の選択
 select-data-fields=データフィールドを選択
 select-date=日時の選択
 select-date-range=日付範囲を選択
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=宛先を選択
 select-destination-folder-for-x-item={0}件の項目の目的のフォルダを選択
 select-destination-folder-for-x-items={0}件の項目の目的のフォルダを選択してください。
