--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookies
 category.custom-dialogs=Aangepaste dialoogvensters
 category.data-integration=Data-integratie
 category.data-providers=Dataproviders
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Ontwikkeling
 category.devices=Apparaten
 category.digital-signature=Digitale handtekening
@@ -4897,6 +4898,7 @@ default-logout-page=Standaardafmeldpagina
 default-logout-page-help=Dit is de pagina waarnaar gebruikers automatisch worden doorverwezen nadat ze zijn uitgelogd. Als u de standaardafmeldpagina bijvoorbeeld wilt instellen als http://localhost:8080/web/guest/logout dient u hier /web/guest/logout in te vullen.
 default-max-connections-per-route=Standaard max. aantal verbindingen per route
 default-page-audit-image-alt-description=Standaardafbeelding voor paginacontrole.
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Standaardvoorkeuren
 default-product-display-page=Standaard weergavepagina product
 default-regular-theme=Standaardopmaakset
@@ -13982,6 +13984,7 @@ select-css-client-extensions=CSS-clientextenties selecteren
 select-data-fields=Gegevensvelden selecteren
 select-date=Datum selecteren
 select-date-range=Datumbereik selecteren
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Bestemming kiezen
 select-destination-folder-for-x-item=Selecteer doelmap voor {0} item
 select-destination-folder-for-x-items=Selecteer doelmap voor {0} items.
