--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Integracja danych (Automatic Translation)
 category.data-providers=Dostawcy danych (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Rozwój
 category.devices=Urządzenia
 category.digital-signature=Podpis cyfrowy (Automatic Translation)
@@ -4897,6 +4898,7 @@ default-logout-page=Domyślna strona wylogowania
 default-logout-page-help=To jest strona na którą użytkownicy zostaną automatycznie przekierowani tuż po wylogowaniu. Na przykład, jeśli chcesz aby domyślną stroną główną był adres http://localhost:8080/web/guest/logout, ustaw ten parametr na /web/guest/logout.
 default-max-connections-per-route=Domyślna maksymalna liczba połączeń na trasę (Automatic Translation)
 default-page-audit-image-alt-description=Domyślny obraz inspekcji strony. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Domyślne ustawienia
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Domyślny motyw zwykły
@@ -13979,6 +13981,7 @@ select-css-client-extensions=Select CSS Client Extensions (Automatic Copy)
 select-data-fields=Wybieranie pól danych (Automatic Translation)
 select-date=Wybierz datę
 select-date-range=Wybierz zakres dat (Automatic Translation)
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Select Destination (Automatic Copy)
 select-destination-folder-for-x-item=Select Destination Folder for {0} Item (Automatic Copy)
 select-destination-folder-for-x-items=Select Destination Folder for {0} Items (Automatic Copy)
