--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Integracija podatkov (Automatic Translation)
 category.data-providers=Ponudniki podatkov (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Razvoj
 category.devices=Naprave (Automatic Translation)
 category.digital-signature=Digitalni podpis (Automatic Translation)
@@ -4897,6 +4898,7 @@ default-logout-page=Privzeta stran za odjava (Automatic Translation)
 default-logout-page-help=To je stran, na ki jo uporabniki samodejno preusmerijo po odjavanju. Če na primer želite, da je privzeta odjavna stran http://localhost:8080/web/guest/logout, nastavite na /web/guest/logout. (Automatic Translation)
 default-max-connections-per-route=Privzete največje povezave na pot (Automatic Translation)
 default-page-audit-image-alt-description=Privzeta slika za nadzor strani. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Privzete nastavitve
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Privzeta navadna tema (Automatic Translation)
@@ -13979,6 +13981,7 @@ select-css-client-extensions=Select CSS Client Extensions (Automatic Copy)
 select-data-fields=Izbira podatkovnih polj (Automatic Translation)
 select-date=Izberi datum
 select-date-range=Izberite časovni obseg (Automatic Translation)
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Select Destination (Automatic Copy)
 select-destination-folder-for-x-item=Select Destination Folder for {0} Item (Automatic Copy)
 select-destination-folder-for-x-items=Select Destination Folder for {0} Items (Automatic Copy)
