--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Data Integration (Automatic Copy)
 category.data-providers=Data Providers (Automatic Copy)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=உருவாக்குதல்
 category.devices=சாதனங்கள்
 category.digital-signature=Digital Signature (Automatic Copy)
@@ -4897,6 +4898,7 @@ default-logout-page=லாக் அவுட் செய்தவுடன் 
 default-logout-page-help=உதாரணமாக, நீங்கள் லாக் அவுட் செய்தவுடன் இந்த URL-க்கு \nhttp://localhost:8080/web/guest/logout செல்ல விரும்பினால், /web/guest/logout என்று குறிப்பிடவும்.
 default-max-connections-per-route=Default Max Connections per Route (Automatic Copy)
 default-page-audit-image-alt-description=Default Page Audit image. (Automatic Copy)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=இயல்புநிலை விருப்பங்கள்
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=வழக்கமான தீம்
@@ -13979,6 +13981,7 @@ select-css-client-extensions=Select CSS Client Extensions (Automatic Copy)
 select-data-fields=Select Data Fields (Automatic Copy)
 select-date=தேதி தேர்ந்தெடு
 select-date-range=Select Date Range (Automatic Copy)
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Select Destination (Automatic Copy)
 select-destination-folder-for-x-item={0} அயிட்டத்திற்கு Destination ஃபோல்டர்களைத் தேர்ந்தெடுக்கவும்
 select-destination-folder-for-x-items=அயிட்டங்கள் {0} க்கான Destination ஃபோல்டரைத் தேர்ந்தெடுக்கவும்
