--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=การผนวกรวมดาต้า
 category.data-providers=ผู้ให้บริการข้อมูล
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=การพัฒนา
 category.devices=อุปกรณ์
 category.digital-signature=ลายมือชื่อดิจิทัล
@@ -4897,6 +4898,7 @@ default-logout-page=ค่าเริ่มต้นของหน้าออ
 default-logout-page-help=นี่คือหน้าของผู้ใช้ที่จะถูกเปลี่ยนรีไดเร็คไปโดยอัตโนมัติหลังจากออกจากระบบ ตัวอย่างเช่น หากต้องการให้หน้าออกจากระบบเริ่มต้นเป็น http://localhost:8080/web/guest/logout ให้ตั้งค่านี้เป็น /web/guest/logout
 default-max-connections-per-route=ค่าเริ่มต้นของการเชื่อมต่อสูงสุดต่อเส้นทาง
 default-page-audit-image-alt-description=ตรวจสอบค่าเริ่มต้นของรูปภาพ
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=ค่ากำหนดเริ่มต้น
 default-product-display-page=หน้าแสดงผลิตภัณฑ์เริ่มต้น
 default-regular-theme=ธีมเริ่มต้น
@@ -10234,7 +10236,7 @@ name-descending=ชื่อที่ลงท้ายด้วย
 name-identifier=ตัวระบุชื่อ
 name-identifier-attribute=ตัวระบุชื่อแอททริบิวต์
 name-identifier-attribute-name=ตัวระบุชื่อแอททริบิวต์เนม
-name-identifier-attribute-name-help=กรอกชื่อแอททริบิวต์ของผู้ใช้เช่น  <strong>emailAddress</strong> or <strong>screenName</strong> หรือคุณสามารถใช้คำนำหน้า <strong>static:</strong> เพื่อใช้ static value หรือคำนำหน้า <strong>expando:</strong> เพื่อใช้แอททริบิวต์ expando
+name-identifier-attribute-name-help=กรอกชื่อแอททริบิวต์ของผู้ใช้เช่น <strong>emailAddress</strong> or <strong>screenName</strong> หรือคุณสามารถใช้คำนำหน้า <strong>static:</strong> เพื่อใช้ static value หรือคำนำหน้า <strong>expando:</strong> เพื่อใช้แอททริบิวต์ expando
 name-identifier-attribute-type=ตัวระบุชื่อประเภทแอททริบิวต์
 name-identifier-format=รูปแบบการระบุชื่อ
 name-is-required=จำเป็นต้องมีชื่อ
@@ -13976,10 +13978,11 @@ select-content=เลือกเนื้อหา (Automatic Translation)
 select-content-metadata=เลือกข้อมูลเมตาของเนื้อหา
 select-country=เลือกประเทศ
 select-css-client-extensions=Select CSS Client Extensions (Automatic Copy)
-select-data-fields=เลือกช่องข้อมูล
-select-date=เลือกวันที่
-select-date-range=เลือกช่วงวันที่
-select-destination=เลือกปลายทาง
+select-data-fields=เลือกเขตข้อมูล (Automatic Translation)
+select-date=เลือกวันที่ (Automatic Translation)
+select-date-range=เลือกช่วงวันที่ (Automatic Translation)
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
+select-destination=Select Destination (Automatic Copy)
 select-destination-folder-for-x-item=เลือกโฟลเดอร์ปลายทางสำหรับรายการ {0}
 select-destination-folder-for-x-items=เลือกโฟลเดอร์ปลายทางสำหรับรายการ {0}
 select-device-family=เลือกตระกูลอุปกรณ์ (Automatic Translation)
