--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Veri Entegrasyonu (Automatic Translation)
 category.data-providers=Veri Sağlayıcıları (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Gelişim
 category.devices=Aygıtları (Automatic Translation)
 category.digital-signature=Dijital İmza (Automatic Translation)
@@ -4897,6 +4898,7 @@ default-logout-page=Varsayılan Oturum Kapatma Sayfası (Automatic Translation)
 default-logout-page-help=Bu, kullanıcıların oturumu kapatmadan sonra otomatik olarak yönlendirilmeleri gereken sayfadır. Örneğin, varsayılan oturum kapatma sayfasının http://localhost:8080/web/guest/logout olmasını istiyorsanız, bunu /web/guest/logout olarak ayarlayın. (Automatic Translation)
 default-max-connections-per-route=Yol Başına Varsayılan Maksimum Bağlantı Sayısı (Automatic Translation)
 default-page-audit-image-alt-description=Varsayılan Sayfa Denetimi görüntüsü. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Varsayılan Tercihler
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Varsayılan Normal Tema (Automatic Translation)
@@ -13979,6 +13981,7 @@ select-css-client-extensions=Select CSS Client Extensions (Automatic Copy)
 select-data-fields=Veri Alanlarını Seç (Automatic Translation)
 select-date=Tarih Seç
 select-date-range=Tarih Aralığı Seç (Automatic Translation)
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Select Destination (Automatic Copy)
 select-destination-folder-for-x-item=Select Destination Folder for {0} Item (Automatic Copy)
 select-destination-folder-for-x-items=Select Destination Folder for {0} Items (Automatic Copy)
