--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Data Integration (Automatic Translation)
 category.data-providers=Dataleverandører (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Udvikling
 category.devices=Enheder (Automatic Translation)
 category.digital-signature=Digital signatur (Automatic Translation)
@@ -4897,6 +4898,7 @@ default-logout-page=Standard log-ud-side
 default-logout-page-help=Dette er den side, som brugerne automatisk omdirigeres til, når de er logget af. Hvis standardlogout http://localhost:8080/web/guest/logout siden f.eks. (Automatic Translation)
 default-max-connections-per-route=Maks. (Automatic Translation)
 default-page-audit-image-alt-description=Standardbillede af sideovervågning. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Standard indstillinger
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Standard normal tema
@@ -13979,6 +13981,7 @@ select-css-client-extensions=Select CSS Client Extensions (Automatic Copy)
 select-data-fields=Vælg datafelter (Automatic Translation)
 select-date=Vælg dato
 select-date-range=Vælg datointerval (Automatic Translation)
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Select Destination (Automatic Copy)
 select-destination-folder-for-x-item=Select Destination Folder for {0} Item (Automatic Copy)
 select-destination-folder-for-x-items=Select Destination Folder for {0} Items (Automatic Copy)
