--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookies
 category.custom-dialogs=Benutzerdefinierte Dialoge
 category.data-integration=Datenintegration
 category.data-providers=Datenanbieter
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Entwicklung
 category.devices=Geräte
 category.digital-signature=Digitale Signatur
@@ -4897,6 +4898,7 @@ default-logout-page=Standardseite nach Abmeldung
 default-logout-page-help=Dies ist die Seite, auf die Benutzer nach der Abmeldung automatisch weitergeleitet werden. Wenn z.B. http://localhost:8080/web/guest/logout die Standardseite nach der Abmeldung sein soll, geben Sie hier /web/guest/logout an.
 default-max-connections-per-route=Standard-Höchstverbindungen pro Route
 default-page-audit-image-alt-description=Standardbild für Seiten-Audit.
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Standardeinstellungen
 default-product-display-page=Standardprodukt Anzeigeseite
 default-regular-theme=Standardtheme für reguläre Zugriffe
@@ -13981,6 +13983,7 @@ select-css-client-extensions=CSS-Client-Erweiterungen auswählen
 select-data-fields=Datenfelder auswählen
 select-date=Datum auswählen
 select-date-range=Datumsbereich auswählen
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Ziel auswählen
 select-destination-folder-for-x-item=Zielordner für {0} Element auswählen
 select-destination-folder-for-x-items=Zielordner für {0} Elemente auswählen.
