--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Ενοποίηση δεδομένων (Automatic Translation)
 category.data-providers=Υπηρεσίες παροχής δεδομένων (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Ανάπτυξη
 category.devices=Συσκευές (Automatic Translation)
 category.digital-signature=Ψηφιακή υπογραφή (Automatic Translation)
@@ -4897,6 +4898,7 @@ default-logout-page=Προκαθορισμένη σελίδα εξόδου
 default-logout-page-help=Αυτή είναι η σελίδα στην οποία ανακατευθύνονται αυτόματα οι χρήστες μετά την αποσύνδεση. Για παράδειγμα, εάν θέλετε να http://localhost:8080/web/guest/logout η προεπιλεγμένη σελίδα αποσύνδεσης, ορίστε αυτήν την επιλογή σε /web/guest/logout. (Automatic Translation)
 default-max-connections-per-route=Προεπιλεγμένες μέγιστες συνδέσεις ανά διαδρομή (Automatic Translation)
 default-page-audit-image-alt-description=Προεπιλεγμένη εικόνα ελέγχου σελίδας. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Προκαθορισμένες προτιμήσεις
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Προκαθορισμένο κανονικό θέμα
@@ -13979,6 +13981,7 @@ select-css-client-extensions=Select CSS Client Extensions (Automatic Copy)
 select-data-fields=Επιλογή πεδίων δεδομένων (Automatic Translation)
 select-date=Επιλογή ημερομηνίας
 select-date-range=Επιλογή εύρους ημερομηνιών (Automatic Translation)
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Select Destination (Automatic Copy)
 select-destination-folder-for-x-item=Select Destination Folder for {0} Item (Automatic Copy)
 select-destination-folder-for-x-items=Select Destination Folder for {0} Items (Automatic Copy)
