--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Andmete integreerimine (Automatic Translation)
 category.data-providers=Andmepakkujad (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Arendus
 category.devices=Seadmed (Automatic Translation)
 category.digital-signature=Digitaalallkiri (Automatic Translation)
@@ -4897,6 +4898,7 @@ default-logout-page=Vaikimisi väljalogimise leht (Automatic Translation)
 default-logout-page-help=See on leht, millele kasutajad pärast väljalogimist automaatselt ümber suunatakse. Näiteks kui soovite, et väljalogimise vaikeleht oleks http://localhost:8080/web/guest/logout, seadke selleks /web/guest/logout. (Automatic Translation)
 default-max-connections-per-route=Vaikimisi maksimaalsed ühendused marsruudi kohta (Automatic Translation)
 default-page-audit-image-alt-description=Lehe auditi vaikepilt. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Vaikimisi keel
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Tavaline vaikekujundus (Automatic Translation)
@@ -13979,6 +13981,7 @@ select-css-client-extensions=Select CSS Client Extensions (Automatic Copy)
 select-data-fields=Andmeväljade valimine (Automatic Translation)
 select-date=Vali kuupäev
 select-date-range=Kuupäevavahemiku valimine (Automatic Translation)
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Select Destination (Automatic Copy)
 select-destination-folder-for-x-item=Select Destination Folder for {0} Item (Automatic Copy)
 select-destination-folder-for-x-items=Select Destination Folder for {0} Items (Automatic Copy)
