--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -2818,6 +2818,7 @@ category.cookies=کوکی ها
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=ادغام داده ها (Automatic Translation)
 category.data-providers=ارائه دهندگان داده ها (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=توسعه
 category.devices=دستگاه ها
 category.digital-signature=امضای دیجیتال (Automatic Translation)
@@ -4897,6 +4898,7 @@ default-logout-page=صفحه‌ی پیش‌فرض خروج از سیستم
 default-logout-page-help=کاربران به‌طور مستقیم پس از خروج به این صفحه هدایت می‌شوند. برای مثال اگر می‌خواهید صفحه خروج به صورت پیش‌فرض http://localhost:8080/web/guest/logout باشد، این را در /web/guest/logout تنظیم نمایید.
 default-max-connections-per-route=اتصالات پیش فرض حداکثر در هر مسیر (Automatic Translation)
 default-page-audit-image-alt-description=تصویر ممیزی صفحه پیش فرض. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=تنظیمات پیش‌فرض
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=تم معمول پیش‌فرض
@@ -13979,6 +13981,7 @@ select-css-client-extensions=Select CSS Client Extensions (Automatic Copy)
 select-data-fields=انتخاب زمینه های داده (Automatic Translation)
 select-date=انتخاب تاریخ
 select-date-range=محدوده تاریخ را انتخاب کنید (Automatic Translation)
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Select Destination (Automatic Copy)
 select-destination-folder-for-x-item=پوشه مقصد را برای {0} مورد انتخاب کنید
 select-destination-folder-for-x-items=پوشه مقصد را برای {0} مورد انتخاب کنید
