--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -2818,6 +2818,7 @@ category.cookies=Evästeet
 category.custom-dialogs=Mukautetut valintaikkunat
 category.data-integration=Dataintegraatio
 category.data-providers=Tietolähteet
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Kehitys
 category.devices=Laitteet
 category.digital-signature=Digitaalinen allekirjoitus
@@ -4897,6 +4898,7 @@ default-logout-page=Oletus uloskirjautumissivu
 default-logout-page-help=Tämä on sivu, mihin käyttäjät automaattisesti ohjataan sisäänkirjautumisen jälkeen. Esimerkiksi, jos käyttäjä uloskirjautumisen jälkeinen sivu on http://localhost:8080/web/guest/logout aseta tämä /web/guest/logout.
 default-max-connections-per-route=Oletus Maksimimäärä Yhteyksiä Reittiä Kohden
 default-page-audit-image-alt-description=Sivun Valvonnan Oletuskuva.
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Oletusmääritykset
 default-product-display-page=Oletusarvoinen tuotteen näyttösivu
 default-regular-theme=Tavallinen oletusteema
@@ -13978,6 +13980,7 @@ select-css-client-extensions=Valitse CSS-asiakaspäätteet
 select-data-fields=Valitse Datakentät
 select-date=Valitse päivä
 select-date-range=Valitse Päivämääräalue
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Valitse kohde
 select-destination-folder-for-x-item=Valitse Kohdekansio {0} Kohteelle
 select-destination-folder-for-x-items=Valitse Kohdekansio {0} Kohteelle.
