--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookies
 category.custom-dialogs=Boîtes de dialogue personnalisées
 category.data-integration=Intégration des données
 category.data-providers=Fournisseurs de données
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Développement
 category.devices=Appareils
 category.digital-signature=Signature numérique
@@ -4897,6 +4898,7 @@ default-logout-page=Page de déconnexion de défaut
 default-logout-page-help=C'est la page vers laquelle les utilisateurs sont rédigés automatiquement après la déconnexion. Par exemple, si vous voulez la page de déconnexion par défaut comme http://localhost:8080/web/guest/logout, définir ceci à /web/guest/logout.
 default-max-connections-per-route=Par défaut, max de connexions par route
 default-page-audit-image-alt-description=Image par défaut d'audit de page.
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Préférences par défaut
 default-product-display-page=Page d'affichage par défaut du produit
 default-regular-theme=Thème standard par défaut
@@ -13981,6 +13983,7 @@ select-css-client-extensions=Sélectionnez les extensions client CSS
 select-data-fields=Sélectionnez les champs de données
 select-date=Sélectionner une date
 select-date-range=Sélectionnez la plage de dates
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Sélectionner la destination
 select-destination-folder-for-x-item=Sélectionnez le dossier de destination pour {0} élément
 select-destination-folder-for-x-items=Sélectionner le dossier de destination pour {0} éléments.
