--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookie-k
 category.custom-dialogs=Egyéni párbeszédablakok
 category.data-integration=Adatintegráció
 category.data-providers=Adatszolgáltatók
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Fejlesztés
 category.devices=Eszközök
 category.digital-signature=Digitális aláírás
@@ -4897,6 +4898,7 @@ default-logout-page=Alapértelmezett kilépő oldal
 default-logout-page-help=A felhasználók kijelentkezés után erre az oldalra kerülnek átirányításra. Például, ha azt szeretnéd, hogy az alapértelmezett kilépő oldal ez legyen: http://localhost:8080/web/guest/logout, állítsd be ezt: /web/guest/logout.
 default-max-connections-per-route=Kapcsolatok útvonalankénti alapértelmezett maximális száma
 default-page-audit-image-alt-description=Alapértelmezett oldalaudit kép.
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Alapértelmezett beállítások
 default-product-display-page=Az alapértelmezett termék megjelenítő oldala
 default-regular-theme=Általános téma
@@ -13982,6 +13984,7 @@ select-css-client-extensions=CSS ügyfél-kiterjesztések kiválasztása
 select-data-fields=Válasszon adatmezőket
 select-date=Dátum kijelölése
 select-date-range=Kiválasztás dátumterjedelem alapján
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Cél kiválasztása
 select-destination-folder-for-x-item=Válasszon célmappát {0} elem számára
 select-destination-folder-for-x-items=Válasszon célmappát {0} elem számára
