--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Integrasi Data (Automatic Translation)
 category.data-providers=Penyedia Data (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Pengembangan
 category.devices=Perangkat (Automatic Translation)
 category.digital-signature=Tanda Tangan Digital (Automatic Translation)
@@ -4897,6 +4898,7 @@ default-logout-page=Standar Keluar Halaman
 default-logout-page-help=Ini adalah halaman yang secara otomatis dialihkan pengguna setelah keluar. Misalnya, jika Anda ingin halaman logout default http://localhost:8080/web/guest/logout, atur ini ke /web/guest/logout. (Automatic Translation)
 default-max-connections-per-route=Koneksi Maks Default per Rute (Automatic Translation)
 default-page-audit-image-alt-description=Gambar Audit Halaman Default. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Default Preferensi
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Standar Tema Biasa
@@ -13979,6 +13981,7 @@ select-css-client-extensions=Select CSS Client Extensions (Automatic Copy)
 select-data-fields=Pilih Bidang Data (Automatic Translation)
 select-date=Pilih Tanggal
 select-date-range=Pilih Rentang Tanggal (Automatic Translation)
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Select Destination (Automatic Copy)
 select-destination-folder-for-x-item=Select Destination Folder for {0} Item (Automatic Copy)
 select-destination-folder-for-x-items=Select Destination Folder for {0} Items (Automatic Copy)
