--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Integrare date (Automatic Translation)
 category.data-providers=Furnizori de date (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Dezvoltare
 category.devices=Dispozitive (Automatic Translation)
 category.digital-signature=Semnătură digitală (Automatic Translation)
@@ -4897,6 +4898,7 @@ default-logout-page=Pagina de Deconectare Implicită
 default-logout-page-help=Aceasta este pagina la care utilizatorii sunt redirecționați automat după deconectare. De exemplu, dacă doriți ca pagina implicită de deconectare să fie http://localhost:8080/web/guest/logout, setați acest lucru la /web/guest/logout. (Automatic Translation)
 default-max-connections-per-route=Conexiuni maxime implicite per rută (Automatic Translation)
 default-page-audit-image-alt-description=Imagine audit pagină implicită. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Preferinte Implicite
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Temă Normala Implicită
@@ -13979,6 +13981,7 @@ select-css-client-extensions=Select CSS Client Extensions (Automatic Copy)
 select-data-fields=Selectare câmpuri de date (Automatic Translation)
 select-date=Data Selectare
 select-date-range=Selectare interval de date (Automatic Translation)
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Select Destination (Automatic Copy)
 select-destination-folder-for-x-item=Select Destination Folder for {0} Item (Automatic Copy)
 select-destination-folder-for-x-items=Select Destination Folder for {0} Items (Automatic Copy)
