--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Интеграция данных (Automatic Translation)
 category.data-providers=Поставщики данных (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Разработка
 category.devices=приборы (Automatic Translation)
 category.digital-signature=цифровая подпись (Automatic Translation)
@@ -4897,6 +4898,7 @@ default-logout-page=Страница выхода по умолчанию
 default-logout-page-help=Это страница, на которую пользователи автоматически перенаправляются после входа. Например, если вы хотите, чтобы страница логотипа по умолчанию была http://localhost:8080/web/guest/logout, установите это на /web/guest/logout. (Automatic Translation)
 default-max-connections-per-route=По умолчанию Макс Соединения на маршрут (Automatic Translation)
 default-page-audit-image-alt-description=Изображение аудита страницы по умолчанию. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Свойства по умолчанию
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Тема по умолчанию
@@ -13979,6 +13981,7 @@ select-css-client-extensions=Select CSS Client Extensions (Automatic Copy)
 select-data-fields=Выберите поля данных (Automatic Translation)
 select-date=Выбрать дату
 select-date-range=Выберите диапазон дат (Automatic Translation)
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Select Destination (Automatic Copy)
 select-destination-folder-for-x-item=Select Destination Folder for {0} Item (Automatic Copy)
 select-destination-folder-for-x-items=Select Destination Folder for {0} Items (Automatic Copy)
