--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -2818,6 +2818,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Інтеграція даних (Automatic Translation)
 category.data-providers=Постачальники даних (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Розробка
 category.devices=Пристрої (Automatic Translation)
 category.digital-signature=цифровий підпис (Automatic Translation)
@@ -4897,6 +4898,7 @@ default-logout-page=Сторінка виходу за промовчанням 
 default-logout-page-help=Це сторінка, на яку автоматично переспрямовуються користувачі після виходу із системи. Наприклад, якщо ви бажаєте, щоб сторінка виходу з системи була http://localhost:8080/web/guest/logout, встановіть для цього значення /web/guest/logout. (Automatic Translation)
 default-max-connections-per-route=Максимальна кількість підключень за промовчанням для одного маршруту (Automatic Translation)
 default-page-audit-image-alt-description=Зображення аудиту сторінки за промовчанням. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Властивості по замовчуванню
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Звичайна тема за промовчанням (Automatic Translation)
@@ -13979,6 +13981,7 @@ select-css-client-extensions=Select CSS Client Extensions (Automatic Copy)
 select-data-fields=Вибір полів даних (Automatic Translation)
 select-date=Вибрати дату
 select-date-range=Вибір діапазону дат (Automatic Translation)
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Select Destination (Automatic Copy)
 select-destination-folder-for-x-item=Select Destination Folder for {0} Item (Automatic Copy)
 select-destination-folder-for-x-items=Select Destination Folder for {0} Items (Automatic Copy)
