--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -2815,6 +2815,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Интегриране на данни (Automatic Translation)
 category.data-providers=Доставчици на данни (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Развой
 category.devices=Устройства (Automatic Translation)
 category.digital-signature=Цифров подпис (Automatic Translation)
@@ -4894,6 +4895,7 @@ default-logout-page=Страница за излизане по подразби
 default-logout-page-help=Това е страницата, към която потребителите автоматично се пренасочват след излизане. Например ако искате страницата за влизане по подразбиране да бъде http://localhost:8080/web/guest/logout, задайте това на /web/гост/изход. (Automatic Translation)
 default-max-connections-per-route=По подразбиране макс връзки на маршрут (Automatic Translation)
 default-page-audit-image-alt-description=Изображение за проверка на страница по подразбиране. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Настройки по подразбиране
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Стандартна тема по подразбиране (Automatic Translation)
@@ -14039,6 +14041,7 @@ select-portlet=Изберете портлет
 select-product-display-page=Избор на страница за показване на продукт (Automatic Translation)
 select-product-group=Избор на продуктова група (Automatic Translation)
 select-production-to-review-the-change=Select production to review the change. (Automatic Copy)
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=Изберете въпрос (Automatic Translation)
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Изберете "Повторно задаване", за да опитате отново. (Automatic Translation)
