--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -2815,6 +2815,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Data Integration (Automatic Translation)
 category.data-providers=Dataleverandører (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Udvikling
 category.devices=Enheder (Automatic Translation)
 category.digital-signature=Digital signatur (Automatic Translation)
@@ -4894,6 +4895,7 @@ default-logout-page=Standard log-ud-side
 default-logout-page-help=Dette er den side, som brugerne automatisk omdirigeres til, når de er logget af. Hvis standardlogout http://localhost:8080/web/guest/logout siden f.eks. (Automatic Translation)
 default-max-connections-per-route=Maks. (Automatic Translation)
 default-page-audit-image-alt-description=Standardbillede af sideovervågning. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Standard indstillinger
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Standard normal tema
@@ -14039,6 +14041,7 @@ select-portlet=Vælg oortlet
 select-product-display-page=Vælg produktvisningsside (Automatic Translation)
 select-product-group=Vælg produktgruppe (Automatic Translation)
 select-production-to-review-the-change=Select production to review the change. (Automatic Copy)
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=Select Question (Automatic Copy)
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Vælg 'Tildel igen' for at prøve igen. (Automatic Translation)
