--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -2815,6 +2815,7 @@ category.cookies=Cookies
 category.custom-dialogs=Benutzerdefinierte Dialoge
 category.data-integration=Datenintegration
 category.data-providers=Datenanbieter
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Entwicklung
 category.devices=Geräte
 category.digital-signature=Digitale Signatur
@@ -4894,6 +4895,7 @@ default-logout-page=Standardseite nach Abmeldung
 default-logout-page-help=Dies ist die Seite, auf die Benutzer nach der Abmeldung automatisch weitergeleitet werden. Wenn z.B. http://localhost:8080/web/guest/logout die Standardseite nach der Abmeldung sein soll, geben Sie hier /web/guest/logout an.
 default-max-connections-per-route=Standard-Höchstverbindungen pro Route
 default-page-audit-image-alt-description=Standardbild für Seiten-Audit.
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Standardeinstellungen
 default-product-display-page=Standardprodukt Anzeigeseite
 default-regular-theme=Standardtheme für reguläre Zugriffe
@@ -14041,6 +14043,7 @@ select-portlet=Portlet auswählen
 select-product-display-page=Produktanzeigeseite auswählen
 select-product-group=Produktgruppe auswählen
 select-production-to-review-the-change=Wählen Sie Produktion, um die Änderung anzuzeigen.
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=Frage auswählen
 select-radius=Radius auswählen
 select-reassign-to-retry=Wählen Sie 'Neu zuweisen', um es erneut zu versuchen.
