--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -2814,6 +2814,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Integrazione dei dati (Automatic Translation)
 category.data-providers=Fornitori di dati (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Sviluppo
 category.devices=Dispositivi
 category.digital-signature=firma digitale (Automatic Translation)
@@ -4893,6 +4894,7 @@ default-logout-page=Pagina di Logout predefinita
 default-logout-page-help=Questa è la pagina su cui saranno ridirezionati gli utenti dopo il logout. Ad esempio, se vuoi che la pagina predefinita dopo il logout sia http://localhost:8080/web/guest/logout, imposta questo valore a /web/guest/logout.
 default-max-connections-per-route=Connessioni max predefinite per route (Automatic Translation)
 default-page-audit-image-alt-description=Immagine di controllo pagina predefinita. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Preferenze Predefinite
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Tema predefinito
@@ -14040,6 +14042,7 @@ select-portlet=Seleziona Portlet
 select-product-display-page=Selezionare la pagina di visualizzazione del prodotto (Automatic Translation)
 select-product-group=Seleziona gruppo di prodotti (Automatic Translation)
 select-production-to-review-the-change=Select production to review the change. (Automatic Copy)
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=Seleziona Domanda
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Selezionare 'Riassegna' per riprovare. (Automatic Translation)
