--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -2815,6 +2815,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Integrasi Data (Automatic Translation)
 category.data-providers=Pembekal Data (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Pembangunan
 category.devices=Peranti (Automatic Translation)
 category.digital-signature=Tandatangan Digital (Automatic Translation)
@@ -4894,6 +4895,7 @@ default-logout-page=Halaman Log Keluar Lalai (Automatic Translation)
 default-logout-page-help=Ini adalah halaman yang pengguna diarahkan semula secara automatik selepas log keluar. Contohnya, jika anda mahu halaman log keluar lalai http://localhost:8080/web/guest/logout, tetapkan ini kepada /web/tetamu/log keluar. (Automatic Translation)
 default-max-connections-per-route=Sambungan Max Lalai bagi setiap Laluan (Automatic Translation)
 default-page-audit-image-alt-description=Imej Audit Halaman Lalai. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Keutamaan Lalai (Automatic Translation)
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Tema Biasa Lalai (Automatic Translation)
@@ -14039,6 +14041,7 @@ select-portlet=Pilih Portlet (Automatic Translation)
 select-product-display-page=Pilih Halaman Paparan Produk (Automatic Translation)
 select-product-group=Pilih Kumpulan Produk (Automatic Translation)
 select-production-to-review-the-change=Select production to review the change. (Automatic Copy)
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=Pilih Soalan (Automatic Translation)
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Pilih 'Reassign' untuk cuba semula. (Automatic Translation)
