--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -2815,6 +2815,7 @@ category.cookies=Cookies
 category.custom-dialogs=Diálogos personalizados
 category.data-integration=Integração de dados
 category.data-providers=Provedores de Dados
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Desenvolvimento
 category.devices=Dispositivos
 category.digital-signature=Assinatura digital
@@ -4894,6 +4895,7 @@ default-logout-page=Página da saída padrão
 default-logout-page-help=Esta é a página para a qual os usuários serão automaticamente redirecionados após saírem. Por exemplo, se você quer que a página de saída seja http://localhost:8080/web/guest/logout, defina como /web/guest/logout.
 default-max-connections-per-route=Número Máximo Padrão de Conexões por Rota
 default-page-audit-image-alt-description=Imagem de auditoria da página padrão.
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Preferências padrão
 default-product-display-page=Página de exibição de produto padrão
 default-regular-theme=Tema regular padrão
@@ -14039,6 +14041,7 @@ select-portlet=Selecionar portlet
 select-product-display-page=Selecionar Página de Exibição do Produto
 select-product-group=Selecionar grupo de produto
 select-production-to-review-the-change=Selecionar produção para revisar a modificação.
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=Selecionar pergunta
 select-radius=Selecionar raio
 select-reassign-to-retry=Selecionar "Retribuir" para tentar novamente.
