--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -2815,6 +2815,7 @@ category.cookies=Cookies
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Integração de Dados (Automatic Translation)
 category.data-providers=Provedores de Dados (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Desenvolvimento
 category.devices=Dispositivos (Automatic Translation)
 category.digital-signature=Assinatura Digital (Automatic Translation)
@@ -4894,6 +4895,7 @@ default-logout-page=Página da Saída do Omissão
 default-logout-page-help=Esta é a página para a qual os utilizadores serão automaticamente redirecionados após saírem. Por exemplo, se pretende que a página de saída seja http://localhost:8080/web/guest/logout, defina como /web/guest/logout.
 default-max-connections-per-route=Conexões Máximas Padrão por Rota (Automatic Translation)
 default-page-audit-image-alt-description=Imagem de auditoria de página padrão. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Preferências por Omissão
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Tema Normal do Omissão
@@ -14041,6 +14043,7 @@ select-portlet=Selecionar Portlet
 select-product-display-page=Selecione a página de exibição do produto (Automatic Translation)
 select-product-group=Selecione o Grupo de Produtos (Automatic Translation)
 select-production-to-review-the-change=Select production to review the change. (Automatic Copy)
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=Selecionar Pergunta
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Selecione 'Redesignar' para tentar novamente. (Automatic Translation)
