--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -2815,6 +2815,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Интеграция данных (Automatic Translation)
 category.data-providers=Поставщики данных (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Разработка
 category.devices=приборы (Automatic Translation)
 category.digital-signature=цифровая подпись (Automatic Translation)
@@ -4894,6 +4895,7 @@ default-logout-page=Страница выхода по умолчанию
 default-logout-page-help=Это страница, на которую пользователи автоматически перенаправляются после входа. Например, если вы хотите, чтобы страница логотипа по умолчанию была http://localhost:8080/web/guest/logout, установите это на /web/guest/logout. (Automatic Translation)
 default-max-connections-per-route=По умолчанию Макс Соединения на маршрут (Automatic Translation)
 default-page-audit-image-alt-description=Изображение аудита страницы по умолчанию. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Свойства по умолчанию
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Тема по умолчанию
@@ -14039,6 +14041,7 @@ select-portlet=Выберите приложение
 select-product-display-page=Выберите страницу отображения продукта (Automatic Translation)
 select-product-group=Выберите группу продуктов (Automatic Translation)
 select-production-to-review-the-change=Select production to review the change. (Automatic Copy)
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=Выберите вопрос
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Выберите 'Reassign' для повторной попытки. (Automatic Translation)
