--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -2815,6 +2815,7 @@ category.cookies=Cookies
 category.custom-dialogs=Cuadros de diálogo personalizados
 category.data-integration=Integración de datos
 category.data-providers=Proveedores de datos
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Desarrollo
 category.devices=Dispositivos
 category.digital-signature=Firma digital
@@ -4894,6 +4895,7 @@ default-logout-page=Página de salida por defecto
 default-logout-page-help=Esta es la página a la que los usuarios serán automáticamente redireccionados después de que se cierren sesión. Por ejemplo, si quiere que la página inicial sea http://localhost:8080/web/guest/login, establézcala como /web/guest/login.
 default-max-connections-per-route=Número máximo de conexiones predeterminadas por ruta
 default-page-audit-image-alt-description=Imagen por defecto de auditoría de página.
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Preferencias por defecto
 default-product-display-page=Página de visualización de producto por defecto
 default-regular-theme=Tema por defecto del portal
@@ -14041,6 +14043,7 @@ select-portlet=Seleccionar portlet
 select-product-display-page=Seleccionar página de visualización de producto
 select-product-group=Seleccionar grupo de productos
 select-production-to-review-the-change=Seleccione el entorno de producción para revisar el cambio.
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=Seleccionar pregunta
 select-radius=Seleccionar radio
 select-reassign-to-retry=Para volver a intentarlo, seleccione «Reasignar».
