--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -2815,6 +2815,7 @@ category.cookies=Cookies
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Intégration des données
 category.data-providers=Fournisseurs de données
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Développement
 category.devices=Appareils
 category.digital-signature=Signature numérique
@@ -4894,6 +4895,7 @@ default-logout-page=Page de déconnexion de défaut
 default-logout-page-help=C'est la page vers laquelle les utilisateurs sont rédigés automatiquement après la déconnexion. Par exemple, si vous voulez la page de déconnexion par défaut comme http://localhost:8080/web/guest/logout, définir ceci à /web/guest/logout.
 default-max-connections-per-route=Par défaut, max de connexions par route
 default-page-audit-image-alt-description=Image par défaut d'audit de page.
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Préférences par défaut
 default-product-display-page=Page d'affichage par défaut du produit
 default-regular-theme=Thème standard par défaut
@@ -14039,6 +14041,7 @@ select-portlet=Choisir une application
 select-product-display-page=Sélectionner la page d'affichage du produit
 select-product-group=Sélectionner un groupe de produits
 select-production-to-review-the-change=Select production to review the change. (Automatic Copy)
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=Sélectionner une question
 select-radius=Sélectionner le rayon
 select-reassign-to-retry=Sélectionnez 'Affecter à nouveau' pour réessayer.
