--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -2815,6 +2815,7 @@ category.cookies=Cookies
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Data Integration (Automatic Copy)
 category.data-providers=Data Providers (Automatic Copy)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Desenvolvemento
 category.devices=Dispositivos
 category.digital-signature=Digital Signature (Automatic Copy)
@@ -4894,6 +4895,7 @@ default-logout-page=Páxina de saída por defecto
 default-logout-page-help=This is the page that users are automatically redirected to after logging out. For example, if you want the default logout page to be http://localhost:8080/web/guest/logout, set this to /web/guest/logout. (Automatic Copy)
 default-max-connections-per-route=Default Max Connections per Route (Automatic Copy)
 default-page-audit-image-alt-description=Default Page Audit image. (Automatic Copy)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Preferencias por defecto
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Tema por defecto do portal
@@ -14039,6 +14041,7 @@ select-portlet=Seleccionar portlet
 select-product-display-page=Select Product Display Page (Automatic Copy)
 select-product-group=Select Product Group (Automatic Copy)
 select-production-to-review-the-change=Select production to review the change. (Automatic Copy)
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=Select Question (Automatic Copy)
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Select 'Reassign' to retry. (Automatic Copy)
