--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -2815,6 +2815,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Integrasi Data (Automatic Translation)
 category.data-providers=Penyedia Data (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Pengembangan
 category.devices=Perangkat (Automatic Translation)
 category.digital-signature=Tanda Tangan Digital (Automatic Translation)
@@ -4894,6 +4895,7 @@ default-logout-page=Standar Keluar Halaman
 default-logout-page-help=Ini adalah halaman yang secara otomatis dialihkan pengguna setelah keluar. Misalnya, jika Anda ingin halaman logout default http://localhost:8080/web/guest/logout, atur ini ke /web/guest/logout. (Automatic Translation)
 default-max-connections-per-route=Koneksi Maks Default per Rute (Automatic Translation)
 default-page-audit-image-alt-description=Gambar Audit Halaman Default. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Default Preferensi
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Standar Tema Biasa
@@ -14039,6 +14041,7 @@ select-portlet=Pilih Portlet
 select-product-display-page=Pilih Halaman Tampilan Produk (Automatic Translation)
 select-product-group=Pilih Grup Produk (Automatic Translation)
 select-production-to-review-the-change=Select production to review the change. (Automatic Copy)
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=Pilih Pertanyaan
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Pilih 'Tetapkan ulang' untuk mencoba kembali. (Automatic Translation)
