--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -2815,6 +2815,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Duomenų integravimas (Automatic Translation)
 category.data-providers=Duomenų teikėjai (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Plėtros (Automatic Translation)
 category.devices=Įrenginiai (Automatic Translation)
 category.digital-signature=Skaitmeninis parašas (Automatic Translation)
@@ -4894,6 +4895,7 @@ default-logout-page=Numatytasis atsijungimo puslapis (Automatic Translation)
 default-logout-page-help=Tai puslapis, į kurį vartotojai automatiškai nukreipiami išsiregistravus. Pavyzdžiui, jei norite, kad numatytasis atsijungimo puslapis būtų http://localhost:8080/web/guest/logout, nustatykite jį kaip /web/guest/logout. (Automatic Translation)
 default-max-connections-per-route=Numatytieji maksimalūs ryšiai pagal maršrutą (Automatic Translation)
 default-page-audit-image-alt-description=Numatytasis puslapio audito vaizdas. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Numatytosios nuostatos (Automatic Translation)
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Numatytoji įprasta tema (Automatic Translation)
@@ -14039,6 +14041,7 @@ select-portlet=Pasirinkite Portlet (Automatic Translation)
 select-product-display-page=Pasirinkti produkto rodymo puslapį (Automatic Translation)
 select-product-group=Pasirinkti produktų grupę (Automatic Translation)
 select-production-to-review-the-change=Select production to review the change. (Automatic Copy)
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=Pasirinkti klausimą (Automatic Translation)
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Pasirinkite "Priskirti iš naujo", kad bandykite dar kartą. (Automatic Translation)
