--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -2815,6 +2815,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Integracja danych (Automatic Translation)
 category.data-providers=Dostawcy danych (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Rozwój
 category.devices=Urządzenia
 category.digital-signature=Podpis cyfrowy (Automatic Translation)
@@ -4894,6 +4895,7 @@ default-logout-page=Domyślna strona wylogowania
 default-logout-page-help=To jest strona na którą użytkownicy zostaną automatycznie przekierowani tuż po wylogowaniu. Na przykład, jeśli chcesz aby domyślną stroną główną był adres http://localhost:8080/web/guest/logout, ustaw ten parametr na /web/guest/logout.
 default-max-connections-per-route=Domyślna maksymalna liczba połączeń na trasę (Automatic Translation)
 default-page-audit-image-alt-description=Domyślny obraz inspekcji strony. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Domyślne ustawienia
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Domyślny motyw zwykły
@@ -14039,6 +14041,7 @@ select-portlet=Wybierz portlet
 select-product-display-page=Wybierz stronę wyświetlania produktu (Automatic Translation)
 select-product-group=Wybierz grupę produktów (Automatic Translation)
 select-production-to-review-the-change=Select production to review the change. (Automatic Copy)
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=Wybierz pytanie
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Wybierz opcję "Ponownie przypisz", aby ponowić próbę. (Automatic Translation)
