--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -2815,6 +2815,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Veri Entegrasyonu (Automatic Translation)
 category.data-providers=Veri Sağlayıcıları (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Gelişim
 category.devices=Aygıtları (Automatic Translation)
 category.digital-signature=Dijital İmza (Automatic Translation)
@@ -4894,6 +4895,7 @@ default-logout-page=Varsayılan Oturum Kapatma Sayfası (Automatic Translation)
 default-logout-page-help=Bu, kullanıcıların oturumu kapatmadan sonra otomatik olarak yönlendirilmeleri gereken sayfadır. Örneğin, varsayılan oturum kapatma sayfasının http://localhost:8080/web/guest/logout olmasını istiyorsanız, bunu /web/guest/logout olarak ayarlayın. (Automatic Translation)
 default-max-connections-per-route=Yol Başına Varsayılan Maksimum Bağlantı Sayısı (Automatic Translation)
 default-page-audit-image-alt-description=Varsayılan Sayfa Denetimi görüntüsü. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Varsayılan Tercihler
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Varsayılan Normal Tema (Automatic Translation)
@@ -14039,6 +14041,7 @@ select-portlet=Portleti Seç
 select-product-display-page=Ürün Görüntüleme Sayfasını Seç (Automatic Translation)
 select-product-group=Ürün Grubu Seçin (Automatic Translation)
 select-production-to-review-the-change=Select production to review the change. (Automatic Copy)
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=Soru Seç (Automatic Translation)
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Yeniden denemek için 'Yeniden Ata'yı seçin. (Automatic Translation)
