--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -2815,6 +2815,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Інтеграція даних (Automatic Translation)
 category.data-providers=Постачальники даних (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Розробка
 category.devices=Пристрої (Automatic Translation)
 category.digital-signature=цифровий підпис (Automatic Translation)
@@ -4894,6 +4895,7 @@ default-logout-page=Сторінка виходу за промовчанням 
 default-logout-page-help=Це сторінка, на яку автоматично переспрямовуються користувачі після виходу із системи. Наприклад, якщо ви бажаєте, щоб сторінка виходу з системи була http://localhost:8080/web/guest/logout, встановіть для цього значення /web/guest/logout. (Automatic Translation)
 default-max-connections-per-route=Максимальна кількість підключень за промовчанням для одного маршруту (Automatic Translation)
 default-page-audit-image-alt-description=Зображення аудиту сторінки за промовчанням. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Властивості по замовчуванню
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Звичайна тема за промовчанням (Automatic Translation)
@@ -14039,6 +14041,7 @@ select-portlet=Виберіть портлет
 select-product-display-page=Виберіть сторінку відображення продукту (Automatic Translation)
 select-product-group=Виберіть групу продуктів (Automatic Translation)
 select-production-to-review-the-change=Select production to review the change. (Automatic Copy)
+select-properties-application-decorators=Select Default Portlet Decoration Id (Automatic Copy)
 select-question=Вибрати запитання (Automatic Translation)
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Натисніть кнопку "Перепризначити", щоб повторити спробу. (Automatic Translation)
